@@ -54,7 +54,6 @@ install : all
 	$(INSTALL) -m 0444 libopenvas/kb.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/network.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/ntp.h $(DESTDIR)${includedir}/openvas
-	$(INSTALL) -m 0444 libopenvascommon/nvti.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/pcap_openvas.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/plugutils.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/popen.h $(DESTDIR)${includedir}/openvas
@@ -71,6 +70,8 @@ install : all
 	$(INSTALL) -m 0444 libopenvas/store.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/system.h $(DESTDIR)${includedir}/openvas
 	$(INSTALL) -m 0444 libopenvas/www_funcs.h $(DESTDIR)${includedir}/openvas
+	$(INSTALL) -m 0444 libopenvascommon/nvti.h $(DESTDIR)${includedir}/openvas
+	$(INSTALL) -m 0444 libopenvascommon/certificate.h $(DESTDIR)${includedir}/openvas
 	test -d $(DESTDIR)${bindir} || ${INSTALL_DIR} -m 755 $(DESTDIR)${bindir}
 	$(INSTALL) -m 0755 libopenvas-config $(DESTDIR)${bindir}/libopenvas-config
 	test -d $(DESTDIR)${mandir} || ${INSTALL_DIR} -m 755 $(DESTDIR)${mandir}
