@@ -1,3 +1,14 @@
+2009-05-29  Matthew Mundell <mmundell@intevation.de>
+
+	Add certificate facilities.
+
+	* libopenvascommon/certificate.h, libopenvascommon/certificate.c: New
+	files.
+
+	* libopenvas/Makefile: Add libopenvascommon/certificate.
+
+	* Makefile: Install libopenvascommon/certificate.h.
+
 2009-05-28  Matthew Mundell <mmundell@intevation.de>
 
 	* libopenvascommon/nvti.c (nvti_to_keyfile): Rename gerror to error.  Free
